# PhysicsFX

./: .gitignore  GAME_LOOP.md  NOTES.md  NOTES1.md  README.md  RUST-WGPU.md  WARP.md  WARP_SESSION.md  WARP_SESSION1.md  build_log.txt  build_log_6.txt  build_log_fps.txt  build_log_fps_final.txt  build_log_loop_fix.txt  gradle.properties  local.properties  settings.gradle.kts  test_final.txt  test_output.txt  test_output_2.txt  thread_dump.txt  thread_dump_2.txt
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/app/kamkash/physicsfx/: AndroidWgpuGameLoop.kt  MainActivity.kt  NativeLib.kt  Platform.android.kt  SidePanel.android.kt  WgpuNativeView.android.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/app/kamkash/physicsfx/: App.kt  Greeting.kt  NativeLib.kt  Platform.kt  WgpuGameLoop.kt
composeApp/src/commonTest/kotlin/app/kamkash/physicsfx/: ComposeAppCommonTest.kt
composeApp/src/iosMain/cinterop/: physics_core.def
composeApp/src/iosMain/kotlin/app/kamkash/physicsfx/: IosWgpuGameLoop.kt  MainViewController.kt  NativeLib.kt  Platform.ios.kt  SidePanel.ios.kt  WgpuNativeView.ios.kt
composeApp/src/jsMain/kotlin/app/kamkash/physicsfx/: NativeLib.kt  Platform.js.kt  WgpuNativeView.js.kt
composeApp/src/jvmMain/kotlin/app/kamkash/physicsfx/: JvmWgpuGameLoop.kt  NativeLib.kt  Platform.jvm.kt  WgpuNativeView.jvm.kt  main.kt
composeApp/src/jvmMain/resources/: libphysics_core.dylib
composeApp/src/jvmTest/kotlin/app/kamkash/physicsfx/: NativeLibTest.kt
composeApp/src/wasmJsMain/kotlin/app/kamkash/physicsfx/: NativeLib.kt  PhysicsCore.kt  Platform.wasmJs.kt  SidePanel.wasmJs.kt  WasmWgpuGameLoop.kt  WgpuNativeView.wasmJs.kt
composeApp/src/wasmJsMain/resources/: package.json  physics_core.d.ts  physics_core.js  physics_core_bg.wasm  physics_core_bg.wasm.d.ts
composeApp/src/webMain/kotlin/app/kamkash/physicsfx/: main.kt
composeApp/src/webMain/resources/: index.html
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/iosApp.xcodeproj/project.xcworkspace/xcuserdata/kamran.xcuserdatad/: UserInterfaceState.xcuserstate
iosApp/iosApp.xcodeproj/xcuserdata/kamran.xcuserdatad/xcschemes/: iosApp.xcscheme
physics_core/: BEVY_ECS.md  Cargo.toml  ECS_WGPU.md  ECS_WGPU_CODE.md  RAPIER_COORD_CONVERSION.md  RAPIER_ECS_WGPU.md  THREE-D.md
physics_core/include/: physics_core.h
physics_core/patches/tracing-oslog/: Cargo.toml
physics_core/patches/tracing-oslog/src/: lib.rs
physics_core/src/: 3d_shader.wgsl  animation.rs  bevy_3d_sample.rs  camera.rs  egui_tools.rs  events.rs  game_entity.rs  lib.rs  shader.wgsl  sprite.rs  three_d_sample.rs
physics_core/tests/: strategy_tests.rs
