[package]
name = "physics_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
wgpu = { version = "27.0.1", features = ["webgl"] }
jni = { version = "0.21", optional = true }
wasm-bindgen = { version = "0.2.93", optional = true }
libc = "0.2"
log = "0.4"
env_logger = "0.11"
pollster = "0.3"
raw-window-handle = "0.6"
once_cell = "1.19"
bytemuck = { version = "1.16", features = ["derive"] }

[features]
default = []
jni_support = ["dep:jni"]
wasm_support = ["dep:wasm-bindgen"]

[target."cfg(not(any(target_arch = \"wasm32\", target_os = \"android\")))".dependencies]
winit = "0.29"

[target."cfg(target_os = \"android\")".dependencies]
android-activity = { version = "0.6", features = ["game-activity"] }
android_logger = "0.14"
ndk = "0.7"
ndk-sys = "0.6.0"