[package]
name = "physics_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
wgpu = { version = "27.0.1", features = ["webgl"] }
jni = { version = "0.21", optional = true }
wasm-bindgen = { version = "0.2.93", optional = true }
libc = "0.2"
log = "0.4"
pollster = "0.3"
raw-window-handle = "0.6"
once_cell = "1.19"
bytemuck = { version = "1.16", features = ["derive"] }
bevy_ecs = "0.14"
rapier3d = { version = "0.19", features = ["simd-stable", "debug-render"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "Element", "Node", "HtmlElement", "CssStyleDeclaration", "Performance"] }
wasm-bindgen-futures = "0.4.30"
console_log = "1.0"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = []
jni_support = ["dep:jni", "dep:winit", "dep:flexi_logger"]
wasm_support = ["dep:wasm-bindgen"]

[target."cfg(not(any(target_arch = \"wasm32\", target_os = \"android\")))".dependencies]
winit = {version="0.29", optional=true}
flexi_logger = {version="0.27", optional=true}

[target."cfg(target_os = \"android\")".dependencies]
android-activity = { version = "0.6", features = ["game-activity"] }
android_logger = "0.14"
ndk = "0.9"